trabajando en los banner

--- a/html/home-agro.html
+++ b/html/home-agro.html
@@ -42,7 +42,7 @@
 
         <!--  SubTemplate: banners -->
         <div class='container'>
-            <div class='row'>
+            <div class='row row-banner'>
                 <vtex:template id="banner-agro-1" />
                 <vtex:template id="banner-agro-2" />
                 <vtex:template id="banner-agro-3" />
