--- a/html/subTemplates/banner-agro-3.html
+++ b/html/subTemplates/banner-agro-3.html
@@ -1,6 +1,7 @@
 <div class="col-sm-4 galeria padding-none" id="galeria-3">
     <div class="datos-banner">
-        <h3>KITCHEN SPICES</h3>
-        <button class="btn btn-default btn-gris"><a href='#' title='VER MÁS'>VER MÁS</a></button>
+        <h3 class="texto-banner">KITCHEN</h3>
+        <h3 class="texto-banner">SPICES</h3>
+        <button class="btn btn-default btn-gris boton-banner"><a href='#' title='VER MÁS'>VER MÁS</a></button>
     </div>
 </div>
