finalizada la seccion de banners con diseño responsive

--- a/html/subTemplates/banner-agro-2.html
+++ b/html/subTemplates/banner-agro-2.html
@@ -2,6 +2,6 @@
     <div class="datos-banner">
         <h3 class="texto-banner">ORGANIC</h3>
         <h3 class="texto-banner">VEGETABLES</h3>
-        <button class="btn btn-default btn-gris boton-banner"><a href='#' title='VER MÁS'>VER MÁS</a></button>
+        <button class="btn btn-default btn-gris boton-banner"><a href="/agro-categorias/vegetales-organicos" title='VER MÁS'>VER MÁS</a></button>
     </div>
 </div>
