--- a/html/subTemplates/footer-agro.html
+++ b/html/subTemplates/footer-agro.html
@@ -38,11 +38,11 @@
                 <div class="col-sm-12 social-media-position">
                     <b>Métodos de pago</b>
                     <div class="pago-img">
-                        <img class="resize-img" src="/arquivos/payment_paypal.png" alt="Visa, MarsterCard, American Express or Skrill"
-                            title="Visa, MarsterCard, American Express or Skrill" />
-                        <img src="/arquivos/payment_visa.png" alt="Visa" title="Visa" />
-                        <img src="/arquivos/payment_express.png" alt="American Express" title="American Express" />
-                        <img src="/arquivos/Skrill.png" alt="Skrill" title="Skrill" />
+                        <a href="#"><img class="resize-img" src="/arquivos/payment_paypal.png" alt="Paypal"
+                            title="Visa, MarsterCard, American Express or Skrill" /></a>
+                        <a href="#"><img src="/arquivos/payment_visa.png" alt="Visa" title="Visa" /></a>
+                        <a href="#"><img src="/arquivos/payment_express.png" alt="American Express" title="American Express" /></a>
+                        <a href="#"><img src="/arquivos/Skrill.png" alt="Skrill" title="Skrill" /></a>
                     </div>
                 </div>
             </div>
