--- a/html/subTemplates/footer-agro.html
+++ b/html/subTemplates/footer-agro.html
@@ -4,10 +4,7 @@
         <div class="row row-footer">
             <!--Seccion Sobre Nosotros-->
             <div class="col-sm-3 col-large-sobre-nosotros">
-                <b>Sobre nosotros</b>
-                <span>Durante mas de 15 años hemos sido referente a nivel estatal por la calidad de nuestros
-                    alimentos, del campo y preparados, y contamos con procesos de producción con
-                    certificación ISO 27400</span>
+                <vtex.cmc:sobrenosotros />
             </div>
             <!--Seccion Informacion-->
             <div class="col-sm-2 list-unstyled col-large-informacion">
