--- a/html/subTemplates/menu-header-agro.html
+++ b/html/subTemplates/menu-header-agro.html
@@ -6,7 +6,7 @@
         <div class="row">
             <div class="col-sm margin-menu">
                 <nav class="navbar navbar-expand-md navbar-light navmenu">
-                    <a class="navbar-left logo-position" href="https://demoagro.myvtex.com/"><img src="/arquivos/logo.png"
+                    <a class="navbar-left logo-position" href="https://demoagro.myvtex.com/"><img src="/arquivos/logo-agro.png"
                             alt="Green Food" /></a>
                     <button class="navbar-toggler toggler-position" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
