cambios a la seccion de contacto en la barra welcome, tambien se arreglo el autocompletado del buscador de VTEX, asi como la posicion y z-index del submenu del CART de VTEX, algunos arreglos al footer

--- a/html/subTemplates/cuenta-header-agro.html
+++ b/html/subTemplates/cuenta-header-agro.html
@@ -5,7 +5,7 @@
                 <span class="telef"><i class="fas fa-phone-volume"></i> <span> + </span>
                     <vtex.cmc:telefone /></span>
             </div><!-- .welcome -->
-            <div class="col-xs-2 text-right" id="nav-mi-cuenta">
+            <div class="col-xs-2" id="nav-mi-cuenta">
                 <nav class="navbar">
                     <ul class="navbar-nav index-mi-cuenta">
                         <li class="nav-item dropdown">
