--- a/html/subTemplates/footer-agro.html
+++ b/html/subTemplates/footer-agro.html
@@ -35,8 +35,7 @@
                 <div class="col-sm-12 social-media-position">
                     <b>Métodos de pago</b>
                     <div class="pago-img">
-                        <a href="#"><img class="resize-img" src="/arquivos/payment_paypal.png" alt="Paypal"
-                            title="Visa, MarsterCard, American Express or Skrill" /></a>
+                        <a href="#"><img class="resize-img" src="/arquivos/payment_paypal.png" alt="Paypal" title="Visa, MarsterCard, American Express or Skrill" /></a>
                         <a href="#"><img src="/arquivos/payment_visa.png" alt="Visa" title="Visa" /></a>
                         <a href="#"><img src="/arquivos/payment_express.png" alt="American Express" title="American Express" /></a>
                         <a href="#"><img src="/arquivos/Skrill.png" alt="Skrill" title="Skrill" /></a>
@@ -66,10 +65,16 @@
     <div class="container-fluid">
         <div class="row">
             <!--Seccion Copyrigth-->
-            <div class="col-sm-12">
+            <div class="col-sm-6">
                 <p id="copyright">
                     <vtex.cmc:copyright />
                 </p>
+            </div>
+            <div class="col-sm-6">
+                <ul class="list-inline footer-link">
+                    <li><a href="#">Contáctanos</a></li>
+                    <li><a href="#">Términos y condiciones</a></li>
+                </ul>
             </div>
         </div>
     </div>
