--- a/html/subTemplates/menu-header-agro.html
+++ b/html/subTemplates/menu-header-agro.html
@@ -60,7 +60,7 @@
                     </div><!-- .mini-cart-xs -->
 
                     <div class="mini-cart col-mini-cart col-xs-1 col-sm-1
-                            col-md-3 col-lg-2 hidden-xs cart-position-large">
+                            col-md-3 col-lg-2 hidden-xs">
                         <a title="Carrito de Compras" href="/checkout/#/cart" class="btn btn-default
                                 btn-block btn-mini-cart cart-style
                                 cart-style-width">
