comienzo del trabajo con vitrinas y colecciones de vtex

--- a/html/home-agro.html
+++ b/html/home-agro.html
@@ -1,23 +1,18 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:vtex="http://www.vtex.com.br/2009/vtex-common" xmlns:vtex.cmc="http://www.vtex.com.br/2009/vtex-commerce"
-    lang="en-us">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:vtex="http://www.vtex.com.br/2009/vtex-common"
+    xmlns:vtex.cmc="http://www.vtex.com.br/2009/vtex-commerce" lang="en-us">
 
 <head>
     <title> Demo Agro</title>
     <vtex:metaTags />
-    <vtex:template id="commonStyles" />
+    <vtex:template id="commonStylesAgro" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="/arquivos/logo-agro.png" />
-    <link href="/arquivos/main.css" rel="stylesheet" type="text/css" />
-    <link href="/arquivos/footer-agro.css" rel="stylesheet" type="text/css" />
-    <link href="/arquivos/header-agro.css" rel="stylesheet" type="text/css" />
-    <link href="/arquivos/slider-agro.css" rel="stylesheet" type="text/css" />
-    <link href="/arquivos/banner-agro.css" rel="stylesheet" type="text/css" />
-    <link href="/arquivos/somos-green-agro.css" rel="stylesheet" type="text/css" />
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-        crossorigin="anonymous" />
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
-        crossorigin="anonymous" />
+
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
+
     <script src="/arquivos/main.js"></script>
 
     <script>
@@ -56,6 +51,10 @@
         <vtex:template id="somos-green-agro" />
         <!-- /SubTemplate: somos-green -->
 
+        <!--  placeHolder: ultimos-agro -->
+        <vtex:contentPlaceHolder id="NuevosAgro" />
+        <!--  placeHolder: ultimos-agro -->
+
         <!--  SubTemplate: Footer -->
         <vtex:template id="footer-agro" />
         <!-- /SubTemplate: Footer -->
@@ -64,11 +63,13 @@
 </body>
 <!--<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
     crossorigin="anonymous"></script>-->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-    crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-    crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+</script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+</script>
 
-<vtex:template id="commonScripts" />
+<vtex:template id="commonScriptsAgro" />
 
 </html>
