--- a/html/commonScriptsAgro.html
+++ b/html/commonScriptsAgro.html
@@ -10,3 +10,15 @@
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCQLnmr5pv2JHAQ-X6C97fVa_CbalZZxSg"></script>
 <!-- JS del commonScripts-->
 
+<!--Bootstrap v4.3-->
+<!--script src="/arquivos/bootstrap.js?u=1"></script-->
+<script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
+<!--<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+</script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+</script>
+<!--Bootstrap v4.3-->
