--- a/html/home-agro.html
+++ b/html/home-agro.html
@@ -9,10 +9,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="/arquivos/logo-agro.png" />
 
-
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
-
+    <link rel="stylesheet" type="text/css" href="/arquivos/slick.css" />
+    <link rel="stylesheet" type="text/css" href="/arquivos/slick-theme.css" />
+    <script src="/arquivos/slick.min.js"></script>
+    <script src="/arquivos/carrusel.js"></script>
     <script src="/arquivos/main.js"></script>
 
     <script>
@@ -51,8 +51,29 @@
         <vtex:template id="somos-green-agro" />
         <!-- /SubTemplate: somos-green -->
 
+
         <!--  placeHolder: ultimos-agro -->
-        <vtex:contentPlaceHolder id="NuevosAgro" />
+
+        <!-- lo más vendido -->
+        <section class="container-fluid bg-padding" style="margin-top: 45px">
+            <div class="container lo-mas-vendido">
+                <div id="lomasnuevo"></div>
+
+                <div class="col-xs-12">
+                    <h2 class="tit-secc-home titulo-style">Últimos productos</h2>
+                </div>
+                <div class="col-xs-12 col-md-10 col-md-offset-1 text-center">
+                    <p></p>
+                </div>
+
+                <div class="col-xs-12">
+                    <div class="LoMasVendido-home regular-block Carrusel">
+                        <vtex:contentPlaceHolder id="carrusel-masvendido" />
+                    </div><!-- .showcase-default -->
+                </div>
+            </div>
+        </section>
+
         <!--  placeHolder: ultimos-agro -->
 
         <!--  SubTemplate: Footer -->
@@ -61,14 +82,6 @@
 
     </div><!-- .container-fluid -->
 </body>
-<!--<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-    crossorigin="anonymous"></script>-->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
-</script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
-</script>
 
 <vtex:template id="commonScriptsAgro" />
 
