--- a/html/subTemplates/footer-agro.html
+++ b/html/subTemplates/footer-agro.html
@@ -10,10 +10,10 @@
             <div class="col-sm-2 list-unstyled col-large-informacion">
                 <b>Información</b>
                 <ul>
-                    <li><a href="/institucional/ajuda">Entrega</a></li>
+                    <li><a href="/institucional/ajuda">Preguntas frecuentes</a></li>
                     <li><a href="#">Términos y condiciones</a></li>
-                    <li><a href="/institucional/quem-somos">Sobre nosotros</a></li>
-                    <li><a href="#">Pago seguro</a></li>
+                    <li><a href="/institucional/quem-somos">Nosotros</a></li>
+                    <li><a href="/institucional/aviso-privacidad">Aviso de privacidad</a></li>
                     <li><a href="#">Nuestras tiendas</a></li>
                 </ul>
             </div>
@@ -74,6 +74,7 @@
                 <ul class="list-inline footer-link">
                     <li><a href="#">Contáctanos</a></li>
                     <li><a href="#">Términos y condiciones</a></li>
+                    <li><a href="#">Políticas y garantías</a></li>
                 </ul>
             </div>
         </div>
