cambios al nav del menu, y a la barra de buscar de vtex asi como al carrito

--- a/html/commonStylesAgro.html
+++ b/html/commonStylesAgro.html
@@ -10,6 +10,7 @@
 <link href="/arquivos/main.css" rel="stylesheet" type="text/css" />
 <link href="/arquivos/footer-agro.css" rel="stylesheet" type="text/css" />
 <link href="/arquivos/header-agro.css" rel="stylesheet" type="text/css" />
+<link href="/arquivos/menu-search-header-agro.css" rel="stylesheet" type="text/css" />
 <link href="/arquivos/slider-agro.css" rel="stylesheet" type="text/css" />
 <link href="/arquivos/banner-agro.css" rel="stylesheet" type="text/css" />
 <link href="/arquivos/somos-green-agro.css" rel="stylesheet" type="text/css" />
