--- a/html/home-agro.html
+++ b/html/home-agro.html
@@ -25,13 +25,19 @@
     <div class="page">
         <div id="home-extra-top">
         </div>
-        <!--  SubTemplate: cuenta-header -->
-        <vtex:template id="cuenta-header-agro" />
-        <!-- /SubTemplate: cuenta-header -->
 
-        <!--  SubTemplate: menu-header -->
-        <vtex:template id="menu-header-agro" />
-        <!-- /SubTemplate: menu-header -->
+        <header>
+            <div class="header">
+                <!--  SubTemplate: cuenta-header -->
+                <vtex:template id="cuenta-header-agro" />
+                <!-- /SubTemplate: cuenta-header -->
+
+                <!--  SubTemplate: menu-header -->
+                <!--<vtex:template id="menu-header-agro" />-->
+                <vtex:template id="menu-search-header-agro" />
+                <!-- /SubTemplate: menu-header -->
+            </div>
+        </header>
 
         <!--  SubTemplate: slider -->
         <vtex:template id="slider-agro" />
