--- a/html/subTemplates/cuenta-header-agro.html
+++ b/html/subTemplates/cuenta-header-agro.html
@@ -1,6 +1,6 @@
 <div class="welcome-bar">
     <div class="container-fluid">
-        <div class="row">
+        <div class="row row-welcome">
             <div class="col-xs-10">
                 <span class="telef"><i class="fas fa-phone-volume"></i> <span> + </span>
                     <vtex.cmc:telefone /></span>
