trabajo en las paginas institucionales, aplicandole sus estilos, as como quedo finalizada la pagina de preguntas y respuestas con el collapse

--- a/html/commonStylesAgro.html
+++ b/html/commonStylesAgro.html
@@ -15,6 +15,9 @@
 <link href="/arquivos/banner-agro.css" rel="stylesheet" type="text/css" />
 <link href="/arquivos/somos-green-agro.css" rel="stylesheet" type="text/css" />
 <link href="/arquivos/lastagro.css" rel="stylesheet" type="text/css" />
+<link href="/arquivos/institucional.css" rel="stylesheet" type="text/css" />
+<link href="/arquivos/preguntas-frecuentes-agro.css" rel="stylesheet" type="text/css" />
+<link href="/arquivos/nosotros-agro.css" rel="stylesheet" type="text/css" />
 <!--Mis CSS-->
 
 <!--Font Awesome-->
