--- a/html/subTemplates/menu-search-header-agro.html
+++ b/html/subTemplates/menu-search-header-agro.html
@@ -18,7 +18,7 @@
                     </form>
 
 
-                    <ul class="navbar-nav my-2 my-lg-0">
+                    <ul class="navbar-nav my-2 my-lg-0 menu-position">
                         <li class="nav-item active">
                             <a class="nav-link" href="#">INICIO <span class="sr-only">(current)</span></a>
                         </li>
