--- a/html/subTemplates/institucionales/politicas-garantias-agro.html
+++ b/html/subTemplates/institucionales/politicas-garantias-agro.html
@@ -40,15 +40,15 @@
 
             <div id="box-bread-brumb" class="hidden-xs list-inline">
                 <a href="https://demoagro.myvtex.com/">INICIO</a> /
-                <span>AVISO DE PRIVACIDAD</span>
+                <span>POLÍTICAS Y GARANTÍAS</span>
             </div>
 
             <div id="institucional-extra-middle"></div>
 
             <div class="conteudo-institucional">
-                <h2 class="titulo-institucional">Aviso de privacidad</h2>
+                <h2 class="titulo-institucional">Políticas y garantías</h2>
 
-                <vtex:contentPlaceHolder id="aviso-privacidad" />
+                <vtex:contentPlaceHolder id="politicas-garantias" />
             </div>
 
         </section><!-- #content -->
