--- a/html/subTemplates/institucionales/preguntas-frecuentes-agro.html
+++ b/html/subTemplates/institucionales/preguntas-frecuentes-agro.html
@@ -8,9 +8,27 @@
     <vtex:template id="commonStylesAgro" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="/arquivos/logo-agro.png" />
+    <style>
+        [data-toggle="collapse"]:after {
+            display: inline-block;
+            display: inline-block;
+            font: normal normal normal 14px/1 FontAwesome;
+            font-size: inherit;
+            text-rendering: auto;
+            -webkit-font-smoothing: antialiased;
+            -moz-osx-font-smoothing: grayscale;
+            content: "\f054";
+            transform: rotate(-90deg);
+            transition: all linear 0.25s;
+            float: right;
+        }
 
+        [data-toggle="collapse"].collapsed:after {
+            transform: rotate(90deg);
+        }
+    </style>
     <script>
-        console.log('9jj')
+        console.log('0')
     </script>
 
 </head>
@@ -40,15 +58,15 @@
 
             <div id="box-bread-brumb" class="hidden-xs list-inline">
                 <a href="https://demoagro.myvtex.com/">INICIO</a> /
-                <span>AVISO DE PRIVACIDAD</span>
+                <span>PREGUNTAS FRECUENTES</span>
             </div>
 
             <div id="institucional-extra-middle"></div>
 
             <div class="conteudo-institucional">
-                <h2 class="titulo-institucional">Aviso de privacidad</h2>
+                <h2 class="titulo-institucional">Preguntas frecuentes</h2>
 
-                <vtex:contentPlaceHolder id="aviso-privacidad" />
+                <vtex:contentPlaceHolder id="preguntas-frecuentes" />
             </div>
 
         </section><!-- #content -->
