--- a/html/subTemplates/institucionales/terminos-condiciones-agro.html
+++ b/html/subTemplates/institucionales/terminos-condiciones-agro.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="/arquivos/logo-agro.png" />
 
-    <script>
+<script>
         console.log('9jj')
     </script>
 
@@ -40,15 +40,15 @@
 
             <div id="box-bread-brumb" class="hidden-xs list-inline">
                 <a href="https://demoagro.myvtex.com/">INICIO</a> /
-                <span>AVISO DE PRIVACIDAD</span>
+                <span>TÉRMINOS Y CONDICIONES DE USO</span>
             </div>
 
             <div id="institucional-extra-middle"></div>
 
             <div class="conteudo-institucional">
-                <h2 class="titulo-institucional">Aviso de privacidad</h2>
+                <h2 class="titulo-institucional">Términos y condiciones de uso</h2>
 
-                <vtex:contentPlaceHolder id="aviso-privacidad" />
+                <vtex:contentPlaceHolder id="politicas-garantias" />
             </div>
 
         </section><!-- #content -->
