creacion de la seccion nosotros sobre compaÑIA

--- a/html/subTemplates/footer-agro.html
+++ b/html/subTemplates/footer-agro.html
@@ -12,9 +12,8 @@
                 <ul>
                     <li><a href="/institucional/preguntas-frecuentes">Preguntas frecuentes</a></li>
                     <li><a href="/institucional/terminos-condiciones">Términos y condiciones</a></li>
-                    <li><a href="/institucional/quem-somos">Nosotros</a></li>
+                    <li><a href="/institucional/nosotros">Nosotros</a></li>
                     <li><a href="/institucional/aviso-privacidad">Aviso de privacidad</a></li>
-                    <li><a href="#">Nuestras tiendas</a></li>
                 </ul>
             </div>
             <!--Seccion Redes Sociales y Metodos de Pago-->
