--- a/html/subTemplates/institucionales/preguntas-placehoder.html
+++ b/html/subTemplates/institucionales/preguntas-placehoder.html
@@ -2,7 +2,7 @@
     <div class="card">
         <div class="card-header" role="tab" id="headingOne">
             <h5 class="mb-0">
-                <a data-toggle="collapse" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                <a class="pregunta-style" data-toggle="collapse" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                     ¿Pregunta?
                 </a>
             </h5>
@@ -17,7 +17,7 @@
     <div class="card">
         <div class="card-header" role="tab" id="headingTwo">
             <h5 class="mb-0">
-                <a class="collapsed" data-toggle="collapse" href="#collapseTwo" aria-expanded="false"
+                <a class="collapsed pregunta-style" data-toggle="collapse" href="#collapseTwo" aria-expanded="false"
                     aria-controls="collapseTwo">
                     ¿Pregunta?
                 </a>
@@ -32,7 +32,7 @@
     <div class="card">
         <div class="card-header" role="tab" id="headingThree">
             <h5 class="mb-0">
-                <a class="collapsed" data-toggle="collapse" href="#collapseThree" aria-expanded="false"
+                <a class="collapsed pregunta-style" data-toggle="collapse" href="#collapseThree" aria-expanded="false"
                     aria-controls="collapseThree">
                     ¿Pregunta?
                 </a>
@@ -48,7 +48,7 @@
     <div class="card">
         <div class="card-header" role="tab" id="headingFour">
             <h5 class="mb-0">
-                <a class="collapsed" data-toggle="collapse" href="#collapseFour" aria-expanded="false"
+                <a class="collapsed pregunta-style" data-toggle="collapse" href="#collapseFour" aria-expanded="false"
                     aria-controls="collapseFour">
                     ¿Pregunta?
                 </a>
@@ -63,7 +63,7 @@
     <div class="card">
         <div class="card-header" role="tab" id="headingFive">
             <h5 class="mb-0">
-                <a class="collapsed" data-toggle="collapse" href="#collapseFive" aria-expanded="false"
+                <a class="collapsed pregunta-style" data-toggle="collapse" href="#collapseFive" aria-expanded="false"
                     aria-controls="collapseFive">
                     ¿Pregunta?
                 </a>
