finalizada la segunda seccion de banners con redireccionamiento a alguna categoria de productos asociada

--- a/html/commonStylesAgro.html
+++ b/html/commonStylesAgro.html
@@ -18,6 +18,7 @@
 <link href="/arquivos/institucional.css" rel="stylesheet" type="text/css" />
 <link href="/arquivos/preguntas-frecuentes-agro.css" rel="stylesheet" type="text/css" />
 <link href="/arquivos/nosotros-agro.css" rel="stylesheet" type="text/css" />
+<link href="/arquivos/banners2-agro.css" rel="stylesheet" type="text/css" />
 <!--Mis CSS-->
 
 <!--Font Awesome-->
