trabajo en seccion de contacto, validacion de campos, funcionalidad del master data para contacto asi como form y trigger para el envio de email notificando el envio del mensaje

--- a/html/commonScriptsAgro.html
+++ b/html/commonScriptsAgro.html
@@ -5,7 +5,7 @@
 <script src="/arquivos/menu-responsivo.js"></script>
 <script src="/arquivos/advanced-filter.js"></script>
 <script src="/arquivos/admake-mini-cart.js"></script>
-<script src="/arquivos/breadBrumb.js"></script>
+<script src="/arquivos/breadBrumbagro.js"></script>
 <script src="/arquivos/default.js"></script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCQLnmr5pv2JHAQ-X6C97fVa_CbalZZxSg"></script>
 <!-- JS del commonScripts-->
