--- a/html/subTemplates/menu-search-header-agro.html
+++ b/html/subTemplates/menu-search-header-agro.html
@@ -48,7 +48,7 @@
                             </div>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">CONTÁCTANOS</a>
+                            <a class="nav-link" href="/contacto">CONTÁCTANOS</a>
                         </li>
                     </ul>
 
