--- a/html/category-agro.html
+++ b/html/category-agro.html
@@ -1,3 +1,12 @@
+<!-- 
+ *
+ * Desenvolvido por Integrando.se
+ * hello@integrando.se
+ * 
+ * Bootstrap v.3
+ *
+ -->
+
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:vtex="http://www.vtex.com.br/2009/vtex-common"
     xmlns:vtex.cmc="http://www.vtex.com.br/2009/vtex-commerce" lang="en-us">
@@ -9,13 +18,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="/arquivos/logo-agro.png" />
 
+    <link href="/arquivos/ion.rangeSlider.css" rel="stylesheet" type="text/css" />
+    <link href="/arquivos/ion.rangeSlider.skinHTML5.css" rel="stylesheet" type="text/css" />
+    <script src="/arquivos/ion.rangeSlider.min.js"></script>
+
     <script>
         console.log('lov')
     </script>
 
 </head>
 
-<body id="departament-page">
+<body id="category-page">
 
     <div class="page">
 
@@ -35,7 +48,7 @@
             </div>
         </header>
 
-        <div id="departament-extra-top"></div>
+        <div id="category-extra-top"></div>
 
         <section id="content" class="container">
 
@@ -43,17 +56,17 @@
                 <vtex.cmc:breadCrumb />
             </div>
 
-            <div id="departament-extra-middle"></div>
+            <div id="category-extra-middle"></div>
 
             <div class="row">
 
                 <aside class="col-xs-3 hidden-xs hidden-sm sidebar">
                     <div id="departament-navegador">
                         <!--  Controle: navegador de departamento -->
-                        <vtex.cmc:singleDepartmentNavigator />
+                        <vtex.cmc:searchNavigator />
                         <!-- /Controle: navegador de departamento -->
 
-                        <div id="departament-extra-menu"></div>
+                        <div id="category-extra-filtro"></div>
                     </div><!-- #departament-navegador -->
                 </aside><!-- .sidebar -->
 
@@ -71,23 +84,13 @@
                         <!-- /placeholder -->
                     </div><!-- #departament-banner -->
 
-                    <vtex:contentPlaceHolder id="new-releases" />
-
                     <div id="collections">
-                        <!--
-                        <div class="collection-wrap">
-                            <vtex.cmc:searchResult layout="ef3fcb99-de72-4251-aa57-71fe5b6e149f" itemCount="12"     columnCount="3" />
-                        </div>
-                        -->
-
                         <div class="showcase-default">
-                            <vtex:contentPlaceHolder id="Destaques" />
-                        </div>
-
-                        <div class="showcase-default">
-                            <vtex:contentPlaceHolder id="Lançamentos" />
-                        </div>
-
+                            <!--  Controle: Resultado da busca / Lista de produtos -->
+                            <vtex.cmc:searchResult layout="19ccd66b-b568-43cb-a106-b52f9796f5cd" itemCount="12"
+                                columnCount="3" />
+                            <!--  /Controle: Resultado da busca / Lista de produtos -->
+                        </div><!-- .collection-wrap -->
                     </div><!-- #collections -->
 
                 </article><!-- #main-content -->
@@ -96,7 +99,7 @@
 
         </section><!-- #content -->
 
-        <div id="departament-extra-bottom"></div>
+        <div id="category-extra-bottom"></div>
 
         <!--  SubTemplate: Footer -->
         <vtex:template id="footer-agro" />
@@ -105,7 +108,6 @@
     </div><!-- .container-fluid -->
 
 </body>
-
 <vtex:template id="commonScriptsAgro" />
 
 </html>
