--- a/html/login-agro.html
+++ b/html/login-agro.html
@@ -15,7 +15,8 @@
 
 </head>
 
-<body id="home-page">
+<body id="login-page">
+    
     <div class="page">
         <div id="home-extra-top">
         </div>
@@ -33,27 +34,14 @@
             </div>
         </header>
 
+        <div id="login-extra-top"></div>
 
-        <div id="institucional-extra-top"></div>
-
-        <section id="institucional-content" class="container">
-
-            <div id="box-bread-brumb" class="hidden-xs list-inline">
-                <a href="https://demoagro.myvtex.com/">INICIO</a> /
-                <span>AVISO DE PRIVACIDAD</span>
-            </div>
-
-            <div id="institucional-extra-middle"></div>
-
-            <div class="conteudo-institucional">
-                <h2 class="titulo-institucional">Aviso de privacidad</h2>
-
-                <vtex:contentPlaceHolder id="aviso-privacidad" />
-            </div>
-
+        <section id="login-content" class="container">
+            <vtex.cmc:userLogin />
         </section><!-- #content -->
 
-        <div id="institucional-extra-bottom"></div>
+        <div id="login-extra-bottom"></div>
+        <div id="login-extra-bottom-dos"></div>
 
         <!--  SubTemplate: Footer -->
         <vtex:template id="footer-agro" />
