--- a/html/orders-agro.html
+++ b/html/orders-agro.html
@@ -15,7 +15,8 @@
 
 </head>
 
-<body id="home-page">
+<body id="orders-page">
+
     <div class="page">
         <div id="home-extra-top">
         </div>
@@ -33,33 +34,21 @@
             </div>
         </header>
 
+        <div id="orders-extra-top"></div>
 
-        <div id="institucional-extra-top"></div>
-
-        <section id="institucional-content" class="container">
-
-            <div id="box-bread-brumb" class="hidden-xs list-inline">
-                <a href="https://demoagro.myvtex.com/">INICIO</a> /
-                <span>AVISO DE PRIVACIDAD</span>
-            </div>
-
-            <div id="institucional-extra-middle"></div>
-
-            <div class="conteudo-institucional">
-                <h2 class="titulo-institucional">Aviso de privacidad</h2>
-
-                <vtex:contentPlaceHolder id="aviso-privacidad" />
-            </div>
-
+        <section id="orders-content" class="container">
+            <vtex.cmc:orderList />
         </section><!-- #content -->
 
-        <div id="institucional-extra-bottom"></div>
+        <div id="orders-extra-bottom"></div>
 
         <!--  SubTemplate: Footer -->
         <vtex:template id="footer-agro" />
         <!-- /SubTemplate: Footer -->
 
+
     </div><!-- .container-fluid -->
+
 </body>
 
 <vtex:template id="commonScriptsAgro" />
