--- a/html/subTemplates/footer-agro.html
+++ b/html/subTemplates/footer-agro.html
@@ -71,7 +71,7 @@
             </div>
             <div class="col-sm-6">
                 <ul class="list-inline footer-link">
-                    <li><a href="#">Contáctanos</a></li>
+                    <li><a href="/contacto">Contáctanos</a></li>
                     <li><a href="/institucional/terminos-condiciones">Términos y condiciones</a></li>
                     <li><a href="/institucional/politicas-garantias">Políticas y garantías</a></li>
                 </ul>
