--- a/html/contacto-agro.html
+++ b/html/contacto-agro.html
@@ -86,7 +86,7 @@
                                             required="required"></textarea>
                                     </div>
                                     <div class="form-group text-right">
-                                        <input type="submit" class="btn boton-banner" value="ENVIAR"
+                                        <input type="submit" class="btn boton-contacto" value="ENVIAR"
                                             name="enviarContacto" id="enviarContacto"
                                             onclick="return validarContact()" />
                                     </div>
@@ -108,7 +108,7 @@
                                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3733.3154861159533!2d-103.38942068518449!3d20.656740005750123!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8428addc0200bb45%3A0x270e5365adc0145!2sTesselar!5e0!3m2!1sen!2smx!4v1553708992122"
                                     width="100%" height="200" frameborder="0" style="border:0"></iframe>
                             </div>
-                            <div class="col-sm-2">
+                            <div class="col-sm-2 text-left">
                                 <p>26 Stark Station</p>
                                 <p>Suite 006</p>
                                 <p>441-768-3785</p>
@@ -119,7 +119,7 @@
                                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3733.3154861159533!2d-103.38942068518449!3d20.656740005750123!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8428addc0200bb45%3A0x270e5365adc0145!2sTesselar!5e0!3m2!1sen!2smx!4v1553708992122"
                                     width="100%" height="200" frameborder="0" style="border:0"></iframe>
                             </div>
-                            <div class="col-sm-2">
+                            <div class="col-sm-2 text-left">
                                 <p>28 Reilly Springs</p>
                                 <p>Suite 862</p>
                                 <p>297-480-8543</p>
