--- a/html/email-template/admin-contacto-agro.html
+++ b/html/email-template/admin-contacto-agro.html
@@ -58,19 +58,52 @@
                             <table border="0" cellpadding="0" cellspacing="0" width="100%">
                                 <tr>
                                     <td style="color: #202020; font-family: Arial, sans-serif; font-size: 18px;">
-                                        <b>{!firstName}</b>
+                                        <b>Notificación de nuevo mensaje!!!</b>
                                     </td>
                                 </tr>
                                 <tr>
                                     <td
                                         style="padding: 20px 0 30px 0; color: #202020; font-family: Arial, sans-serif; font-size: 16px; line-height: 20px;">
-                                        Hemos recibido tus comentarios y nos pondremos en contacto a la mayor brevedad
-                                        posible.
+                                        Ha recibido un nuevo mensaje a traves de Demo Agro / Contáctanos.
                                     </td>
 
                                 </tr>
-
-
+                                <tr>
+                                    <td
+                                        style="padding: 20px 0 30px 0; color: #202020; font-family: Arial, sans-serif; font-size: 16px; line-height: 20px;">
+                                        Le escribió: {!nombre},
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td
+                                        style="padding: 20px 0 30px 0; color: #202020; font-family: Arial, sans-serif; font-size: 16px; line-height: 20px;">
+                                        Asunto: {!asunto}
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td
+                                        style="padding: 20px 0 30px 0; color: #202020; font-family: Arial, sans-serif; font-size: 16px; line-height: 20px;">
+                                        Email: {!email}
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td
+                                        style="padding: 20px 0 30px 0; color: #202020; font-family: Arial, sans-serif; font-size: 16px; line-height: 20px;">
+                                        Mensaje: {!mensaje}
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td
+                                        style="padding: 20px 0 30px 0; color: #202020; font-family: Arial, sans-serif; font-size: 16px; line-height: 20px;">
+                                        Fecha del Mensaje: {=CreateDate}
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td
+                                        style="padding: 20px 0 30px 0; color: #202020; font-family: Arial, sans-serif; font-size: 16px; line-height: 20px;">
+                                        Le recomendamos contestar lo antes porsible.
+                                    </td>
+                                </tr>
                             </table>
                         </td>
                     </tr>
